2011-10-10  Simon Fraser  <simon.fraser@apple.com>

        REGRESSION(96070) 25% intl1 PLT regression from scrollbar invalidation
        https://bugs.webkit.org/show_bug.cgi?id=69238

        Reviewed by Darin Adler.

        Fix PLT regression from additional scrollbars invalidations.
        
        Don't invalidate the scrollbar rect from setHasHorizontalScrollbar()
        and setHasVerticalScrollbar(), because this is called during FrameView
        teardown, at which point the invalidation is redundant.
        
        Instead, invalidate from ScrollView::updateScrollbars(), which is
        called only when scrollbars change because of size or layout
        changes.

        * platform/ScrollView.cpp:
        (WebCore::ScrollView::setHasHorizontalScrollbar):
        (WebCore::ScrollView::setHasVerticalScrollbar):
        (WebCore::ScrollView::updateScrollbars):

2011-10-10  Abhishek Arya  <inferno@chromium.org>

        Style for updated due to inability to locate
        :before content in presence of listmarkers and runins.
        https://bugs.webkit.org/show_bug.cgi?id=68624

        Reviewed by Dan Bernstein.

        Tests: fast/lists/inline-before-content-after-list-marker.html
               fast/runin/runin-between-list-marker-and-before-content.html
               fast/runin/runin-into-div-with-float-child.html
               fast/runin/runin-not-go-into-float.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::handleRunInChild): Fix as per spec that
        we should not be skipping over floating/positioned renderers to
        push runins into neighbouring block. This matches Opera renderings.
        * rendering/RenderObject.cpp: Add const to parameter variable
        to make call from beforePseudoElementRenderer easier. Also matches
        CounterNode.h definition.
        (WebCore::RenderObject::nextInPreOrder):
        (WebCore::RenderObject::nextInPreOrderAfterChildren):