@@ -29,6 +29,7 @@
  */
 
 #include "config.h"
+#if ENABLE(JAVASCRIPT_DEBUGGER)
 #include "V8ScriptProfile.h"
 
 #include "ScriptProfile.h"
@@ -59,3 +60,5 @@ v8::Handle<v8::Value> toV8(ScriptProfile* impl)
 }
 
 } // namespace WebCore
+
+#endif // ENABLE(JAVASCRIPT_DEBUGGER)
