@@ -29,6 +29,7 @@
  */
 
 #include "config.h"
+#if ENABLE(JAVASCRIPT_DEBUGGER)
 #include "V8ScriptProfileNode.h"
 
 #include "ScriptProfileNode.h"
@@ -79,3 +80,5 @@ v8::Handle<v8::Value> toV8(ScriptProfileNode* impl)
 }
 
 } // namespace WebCore
+
+#endif // ENABLE(JAVASCRIPT_DEBUGGER)
