@@ -1,3 +1,15 @@
+2011-10-10  Nayan Kumar K  <nayankk@motorola.com>
+
+        Add missing ifdef for JAVASCRIPT_DEBUGGER feature.
+        https://bugs.webkit.org/show_bug.cgi?id=69758
+
+        Reviewed by Adam Barth.
+
+        No new tests added since this is a build failure fix.
+
+        * bindings/v8/custom/V8ScriptProfileCustom.cpp:
+        * bindings/v8/custom/V8ScriptProfileNodeCustom.cpp:
+
 2011-10-10  Simon Fraser  <simon.fraser@apple.com>
 
         REGRESSION(96070) 25% intl1 PLT regression from scrollbar invalidation
